saving work, trying to figure out card wrapping issue within FAQ section

--- a/src/Styles/contact_faq_styles.scss
+++ b/src/Styles/contact_faq_styles.scss
@@ -43,6 +43,7 @@
     justify-content: center;
     align-items: center;
     gap: 1em;
+    // flex-wrap: wrap;
 }
 
 .FAQ-header-text-styles { 
@@ -54,6 +55,10 @@
 .question-card-content { 
     display: flex;
     flex-direction: column;
+    
+    // justify-content: center;
+    // align-items: center;
+    // flex-wrap: wrap;
     // justify-content: center;
     // align-items: center;
     text-align: center;
@@ -67,13 +72,21 @@
 
 .question-card-content p { 
     display: flex;
+    flex-grow: 1;
+    margin-top: auto;
+    // justify-content: center;
+    align-items: center;
     max-width: 20em;
+    max-height: 16em;
     font-size: 1.2rem;
 }
 
 .question-card-content h6 { 
     font-weight: bold;
-}
+    margin-bottom: 0.5em;
+} 
+
+
 
 // .FAQ-content-container div { 
 //     display: flex;
@@ -84,7 +97,20 @@
 .card-set-1,
 .card-set-2 { 
     display: flex;
-    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    // flex-wrap: wrap;
     gap: 1em;
 }
 
+
+// @media (max-width: 800px) { 
+//     .card-set-1, 
+//     .card-set-2 { 
+//         display: flex;
+//         flex-direction: column;
+//         justify-content: center;
+//         align-items: center;
+      
+//     }
+// }
